src/ref/RayLib.pas


  // Draw a pixel
  DrawPixel: procedure(posX: Integer; posY: Integer; color: TColor); cdecl;
  // Draw a pixel (Vector version)
  DrawPixelV: procedure(position: TVector2; color: TColor); cdecl;
  // Draw a line
  DrawLine: procedure(startPosX: Integer; startPosY: Integer; endPosX: Integer; endPosY: Integer; color: TColor); cdecl;
  // Draw a line (Vector version)
  DrawLineV: procedure(startPos: TVector2; endPos: TVector2; color: TColor); cdecl;
  // Draw a line defining thickness
  DrawLineEx: procedure(startPos: TVector2; endPos: TVector2; thick: Single; color: TColor); cdecl;
  // Draw a line using cubic-bezier curves in-out
  DrawLineBezier: procedure(startPos: TVector2; endPos: TVector2; thick: Single; color: TColor); cdecl;
  // Draw line using quadratic bezier curves with a control point
  DrawLineBezierQuad: procedure(startPos: TVector2; endPos: TVector2; controlPos: TVector2; thick: Single; Color: TColor); cdecl;
  // Draw line using cubic bezier curves with 2 control points
  DrawLineBezierCubic: procedure(startPos: TVector2; endPos: TVector2; startControlPos: TVector2; endControlPos: TVector2; thick: Single; Color: TColor); cdecl;
  // Draw a color-filled circle
  DrawCircle: procedure(centerX: Integer; centerY: Integer; radius: Single; color: TColor); cdecl;
  // Draw a piece of a circle
  DrawCircleSector: procedure(center: TVector2; radius: Single; startAngle: Single; endAngle: Single; segments: Integer; color: TColor); cdecl;
  // Draw circle sector outline
  DrawCircleSectorLines: procedure(center: TVector2; radius: Single; startAngle: Single; endAngle: Single; segments: Integer; color: TColor); cdecl;
  // Draw a gradient-filled circle
  DrawCircleGradient: procedure(centerX: Integer; centerY: Integer; radius: Single; color1: TColor; color2: TColor); cdecl;
  // Draw a color-filled circle (Vector version)
  DrawCircleV: procedure(center: TVector2; radius: Single; color: TColor); cdecl;
  // Draw circle outline
  DrawCircleLines: procedure(centerX: Integer; centerY: Integer; radius: Single; color: TColor); cdecl;
  // Draw ellipse
  DrawEllipse: procedure(centerX: Integer; centerY: Integer; radiusH: Single; radiusV: Single; color: TColor); cdecl;
  // Draw ellipse outline
  DrawEllipseLines: procedure(centerX: Integer; centerY: Integer; radiusH: Single; radiusV: Single; color: TColor); cdecl;
  // Draw ring
  DrawRing: procedure(center: TVector2; innerRadius: Single; outerRadius: Single; startAngle: Single; endAngle: Single; segments: Integer; color: TColor); cdecl;
  // Draw ring outline
  DrawRingLines: procedure(center: TVector2; innerRadius: Single; outerRadius: Single; startAngle: Single; endAngle: Single; segments: Integer; color: TColor); cdecl;
  // Draw a color-filled rectangle
  DrawRectangle: procedure(posX: Integer; posY: Integer; Width: Integer; Height: Integer; Color: TColor); cdecl;
  // Draw a color-filled rectangle (Vector version)
  DrawRectangleV: procedure(position: TVector2; size: TVector2; color: TColor); cdecl;
  // Draw a color-filled rectangle
  DrawRectangleRec: procedure(rec: TRectangle; color: TColor); cdecl;
  // Draw a color-filled rectangle with pro parameters
  DrawRectanglePro: procedure(rec: TRectangle; origin: TVector2; rotation: Single; color: TColor); cdecl;
  // Draw a vertical-gradient-filled rectangle
  DrawRectangleGradientV: procedure(posX: Integer; posY: Integer; width: Integer; height: Integer; color1: TColor; color2: TColor); cdecl;
  // Draw a horizontal-gradient-filled rectangle
  DrawRectangleGradientH: procedure(posX: Integer; posY: Integer; width: Integer; height: Integer; color1: TColor; color2: TColor); cdecl;
  // Draw a gradient-filled rectangle with custom vertex colors
  DrawRectangleGradientEx: procedure(rec: TRectangle; col1: TColor; col2: TColor; col3: TColor; col4: TColor); cdecl;
  // Draw rectangle outline
  DrawRectangleLines: procedure(posX: Integer; posY: Integer; width: Integer; height: Integer; color: TColor); cdecl;
  // Draw rectangle outline with extended parameters
  DrawRectangleLinesEx: procedure(rec: TRectangle; lineThick: Single; color: TColor); cdecl;
  // Draw rectangle with rounded edges
  DrawRectangleRounded: procedure(rec: TRectangle; roundness: Single; segments: Integer; color: TColor); cdecl;
  // Draw rectangle with rounded edges outline
  DrawRectangleRoundedLines: procedure(rec: TRectangle; roundness: Single; segments: Integer; lineThick: Single; color: TColor); cdecl;
  // Draw a color-filled triangle (vertex in counter-clockwise order!)
  DrawTriangle: procedure(v1: TVector2; v2: TVector2; v3: TVector2; color: TColor); cdecl;
  // Draw triangle outline (vertex in counter-clockwise order!)
  DrawTriangleLines: procedure(v1: TVector2; v2: TVector2; v3: TVector2; color: TColor); cdecl;
  // Draw a triangle fan defined by points (first vertex is the center)
  DrawTriangleFan: procedure(points: PVector2; PointCount: Integer; color: TColor); cdecl;
  // Draw a triangle strip defined by points
  DrawTriangleStrip: procedure(points: PVector2; pointCount: Integer; color: TColor); cdecl;
  // Draw a regular polygon (Vector version)
  DrawPoly: procedure(center: TVector2; sides: Integer; radius: Single; rotation: Single; color: TColor); cdecl;
  // Draw a polygon outline of n sides
  DrawPolyLines: procedure(center: TVector2; sides: Integer; radius: Single; rotation: Single; color: TColor); cdecl;
  // Draw a polygon outline of n sides with extended parameters
  DrawPolyLinesEx: procedure(center: TVector2; Sides: Integer; Radius: Single; Rotation: Single; lineThick: Single; Color: TColor); cdecl;

  { Basic shapes collision detection functions }

  // Check collision between two rectangles
  CheckCollisionRecs: function(rec1: TRectangle; rec2: TRectangle): Boolean; cdecl;
  // Check collision between two circles
  CheckCollisionCircles: function(center1: TVector2; radius1: Single; center2: TVector2; radius2: Single): Boolean; cdecl;
  // Check collision between circle and rectangle
  CheckCollisionCircleRec: function(center: TVector2; radius: Single; rec: TRectangle): Boolean; cdecl;
  // Check if point is inside rectangle
  CheckCollisionPointRec: function(point: TVector2; rec: TRectangle): Boolean; cdecl;
  // Check if point is inside circle
  CheckCollisionPointCircle: function(point: TVector2; center: TVector2; radius: Single): Boolean; cdecl;
  // Check if point is inside a triangle
  CheckCollisionPointTriangle: function(point: TVector2; p1: TVector2; p2: TVector2; p3: TVector2): Boolean; cdecl;
  // Check the collision between two lines defined by two points each, returns collision point by reference
  CheckCollisionLines: function(startPos1, endPos1, startPos2, endPos2: TVector2; collisionPoint: PVector2): Boolean; cdecl;
  // Check if point belongs to line created between two points [p1] and [p2] with defined margin in pixels [threshold]
  CheckCollisionPointLine: function(point: TVector2; p1: TVector2; p2: TVector2; threshold: Integer): Boolean; cdecl;
  // Get collision rectangle for two rectangles collision
  GetCollisionRec: function(rec1: TRectangle; rec2: TRectangle): TRectangle; cdecl;

//------------------------------------------------------------------------------------
// Texture Loading and Drawing Functions (Module: textures)
//------------------------------------------------------------------------------------

  { Image loading functions }
  // NOTE: This functions do not require GPU access

  // Load image from file into CPU memory (RAM)
  LoadImage: function(const fileName: PUTF8Char): TImage; cdecl;
  // Load image from RAW file data
  LoadImageRaw: function(const fileName: PUTF8Char; width: Integer; height: Integer; format: Integer; headerSize: Integer): TImage; cdecl;
  // Load image sequence from file (frames appended to image.data)
  LoadImageAnim: function(const fileName: PUTF8Char; frames: Integer): TImage; cdecl;
  // Load image from memory buffer, fileType refers to extension: i.e. "png"
  LoadImageFromMemory: function(const fileType: PUTF8Char; fileData: PByte; dataSize: Integer): TImage; cdecl;
  // Load image from GPU texture data
  LoadImageFromTexture: function(texture: TTexture2D): TImage; cdecl;
  // Load image from screen buffer and (screenshot)
  LoadImageFromScreen: function(): TImage; cdecl;
  // Unload image from CPU memory (RAM)
  UnloadImage: procedure(image: TImage); cdecl;
  // Export image data to file
  ExportImage: procedure(image: TImage; const fileName: PUTF8Char); cdecl;
  // Export image as code file defining an array of bytes
  ExportImageAsCode: procedure(image: TImage; const fileName: PUTF8Char); cdecl;

  { Image generation functions }

  // Generate image: plain color
  GenImageColor: function(width: Integer; height: Integer; color: TColor): TImage; cdecl;
  // Generate image: vertical gradient
  GenImageGradientV: function(width: Integer; height: Integer; top: TColor; bottom: TColor): TImage; cdecl;
  // Generate image: horizontal gradient
  GenImageGradientH: function(width: Integer; height: Integer; left: TColor; right: TColor): TImage; cdecl;
  // Generate image: radial gradient
  GenImageGradientRadial: function(width: Integer; height: Integer; density: Single; inner: TColor; outer: TColor): TImage; cdecl;
  // Generate image: checked
  GenImageChecked: function(width: Integer; height: Integer; checksX: Integer; checksY: Integer; col1: TColor; col2: TColor): TImage; cdecl;
  // Generate image: white noise
  GenImageWhiteNoise: function(width: Integer; height: Integer; factor: Single): TImage; cdecl;
  // Generate image: cellular algorithm, bigger tileSize means bigger cells
  GenImageCellular: function(width: Integer; height: Integer; tileSize: Integer): TImage; cdecl;

  { Image manipulation functions }
